# junito

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
junito/: __main__.py  junito.py  main.py
tests/: conftest.py  test_junito.py
tests/fixtures/: test-report.xml
